# console/console_api/router_gen/eigenflux/console/console.go
@@ -27,6 +27,11 @@ func Register(r *server.Hertz) {
 				_agents := _v1.Group("/agents", _agentsMw()...)
 				_agents.GET("/:agent_id", append(_getagentMw(), console.GetAgent)...)
 				_agents.PUT("/:agent_id", append(_updateagentMw(), console.UpdateAgent)...)
+				_v1.GET("/blacklist-keywords", append(_listblacklistkeywordsMw(), console.ListBlacklistKeywords)...)
+				_blacklist_keywords := _v1.Group("/blacklist-keywords", _blacklist_keywordsMw()...)
+				_blacklist_keywords.DELETE("/:keyword_id", append(_deleteblacklistkeywordMw(), console.DeleteBlacklistKeyword)...)
+				_blacklist_keywords.PUT("/:keyword_id", append(_updateblacklistkeywordMw(), console.UpdateBlacklistKeyword)...)
+				_v1.POST("/blacklist-keywords", append(_createblacklistkeywordMw(), console.CreateBlacklistKeyword)...)
 				_v1.GET("/items", append(_listitemsMw(), console.ListItems)...)
 				_items := _v1.Group("/items", _itemsMw()...)
 				_items.PUT("/:item_id", append(_updateitemMw(), console.UpdateItem)...)
